parser.output
Terminals unused in grammar

   TOKEN_ERRO


Grammar

    0 $accept: p $end

    1 p: s

    2 s: decl_global s
    3  | def_funcao s
    4  | /* empty */

    5 decl_global: decl_var ';'
    6            | decl_vetor ';'

    7 decl_local: decl_var ';' decl_local
    8           | /* empty */

    9 decl_var: tipo_var ':' TK_IDENTIFICADOR

   10 decl_vetor: tipo_var ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   11 tipo_var: TK_PR_INT
   12         | TK_PR_FLOAT
   13         | TK_PR_BOOL
   14         | TK_PR_CHAR
   15         | TK_PR_STRING

   16 def_funcao: cabecalho decl_local bloco_comando

   17 chamada_funcao: TK_IDENTIFICADOR '(' lista_expressoes ')'

   18 cabecalho: decl_var '(' lista_parametros ')'

   19 lista_parametros: lista_parametros_nao_vazia
   20                 | /* empty */

   21 lista_parametros_nao_vazia: parametro ',' lista_parametros_nao_vazia
   22                           | parametro

   23 parametro: decl_var

   24 comando: bloco_comando
   25        | controle_fluxo
   26        | atribuicao ';'
   27        | entrada ';'
   28        | saida ';'
   29        | retorna ';'
   30        | decl_var ';'
   31        | chamada_funcao ';'

   32 comando_simples: atribuicao
   33                | entrada
   34                | saida
   35                | retorna
   36                | decl_var
   37                | chamada_funcao

   38 bloco_comando: '{' seq_comando '}'

   39 seq_comando: comando seq_comando
   40            | ';'
   41            | /* empty */

   42 atribuicao: TK_IDENTIFICADOR '=' expressao
   43           | TK_IDENTIFICADOR '[' expressao ']' '=' expressao

   44 entrada: TK_PR_INPUT TK_IDENTIFICADOR

   45 saida: TK_PR_OUTPUT lista_expressoes_nao_vazia

   46 lista_expressoes_nao_vazia: expressao ',' lista_expressoes_nao_vazia
   47                           | expressao

   48 retorna: TK_PR_RETURN expressao

   49 controle_fluxo: TK_PR_IF '(' expressao ')' TK_PR_THEN comando
   50               | TK_PR_IF '(' expressao ')' TK_PR_THEN comando TK_PR_ELSE comando
   51               | TK_PR_IF '(' expressao ')' TK_PR_THEN comando_simples TK_PR_ELSE comando
   52               | TK_PR_WHILE '(' expressao ')' TK_PR_DO comando
   53               | TK_PR_DO comando TK_PR_WHILE '(' expressao ')'

   54 expressao: TK_IDENTIFICADOR
   55          | TK_IDENTIFICADOR '[' expressao ']'
   56          | expressao '+' expressao
   57          | expressao '-' expressao
   58          | expressao '*' expressao
   59          | expressao '/' expressao
   60          | expressao '<' expressao
   61          | expressao '>' expressao
   62          | '+' expressao
   63          | '-' expressao
   64          | '(' expressao ')'
   65          | expressao TK_OC_LE expressao
   66          | expressao TK_OC_GE expressao
   67          | expressao TK_OC_EQ expressao
   68          | expressao TK_OC_NE expressao
   69          | expressao TK_OC_AND expressao
   70          | expressao TK_OC_OR expressao
   71          | chamada_funcao
   72          | TK_LIT_INT
   73          | TK_LIT_FLOAT
   74          | TK_LIT_FALSE
   75          | TK_LIT_TRUE
   76          | TK_LIT_CHAR
   77          | TK_LIT_STRING

   78 lista_expressoes: lista_expressoes_nao_vazia
   79                 | /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 18 49 50 51 52 53 64
')' (41) 17 18 49 50 51 52 53 64
'*' (42) 58
'+' (43) 56 62
',' (44) 21 46
'-' (45) 57 63
'/' (47) 59
':' (58) 9 10
';' (59) 5 6 7 26 27 28 29 30 31 40
'<' (60) 60
'=' (61) 42 43
'>' (62) 61
'[' (91) 10 43 55
']' (93) 10 43 55
'{' (123) 38
'}' (125) 38
error (256)
TK_PR_INT (258) 11
TK_PR_FLOAT (259) 12
TK_PR_BOOL (260) 13
TK_PR_CHAR (261) 14
TK_PR_STRING (262) 15
TK_PR_IF (263) 49 50 51
TK_PR_THEN (264) 49 50 51
TK_PR_ELSE (265) 50 51
TK_PR_WHILE (266) 52 53
TK_PR_DO (267) 52 53
TK_PR_INPUT (268) 44
TK_PR_OUTPUT (269) 45
TK_PR_RETURN (270) 48
TK_OC_LE (271) 65
TK_OC_GE (272) 66
TK_OC_EQ (273) 67
TK_OC_NE (274) 68
TK_OC_AND (275) 69
TK_OC_OR (276) 70
TK_LIT_INT (277) 10 72
TK_LIT_FLOAT (278) 73
TK_LIT_FALSE (279) 74
TK_LIT_TRUE (280) 75
TK_LIT_CHAR (281) 76
TK_LIT_STRING (282) 77
TK_IDENTIFICADOR (283) 9 10 17 42 43 44 54 55
TOKEN_ERRO (284)
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
p (48)
    on left: 1, on right: 0
s (49)
    on left: 2 3 4, on right: 1 2 3
decl_global (50)
    on left: 5 6, on right: 2
decl_local (51)
    on left: 7 8, on right: 7 16
decl_var (52)
    on left: 9, on right: 5 7 18 23 30 36
decl_vetor (53)
    on left: 10, on right: 6
tipo_var (54)
    on left: 11 12 13 14 15, on right: 9 10
def_funcao (55)
    on left: 16, on right: 3
chamada_funcao (56)
    on left: 17, on right: 31 37 71
cabecalho (57)
    on left: 18, on right: 16
lista_parametros (58)
    on left: 19 20, on right: 18
lista_parametros_nao_vazia (59)
    on left: 21 22, on right: 19 21
parametro (60)
    on left: 23, on right: 21 22
comando (61)
    on left: 24 25 26 27 28 29 30 31, on right: 39 49 50 51 52 53
comando_simples (62)
    on left: 32 33 34 35 36 37, on right: 51
bloco_comando (63)
    on left: 38, on right: 16 24
seq_comando (64)
    on left: 39 40 41, on right: 38 39
atribuicao (65)
    on left: 42 43, on right: 26 32
entrada (66)
    on left: 44, on right: 27 33
saida (67)
    on left: 45, on right: 28 34
lista_expressoes_nao_vazia (68)
    on left: 46 47, on right: 45 46 78
retorna (69)
    on left: 48, on right: 29 35
controle_fluxo (70)
    on left: 49 50 51 52 53, on right: 25
expressao (71)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77, on right: 42 43 46 47 48 49 50 51 52 53 55 56
    57 58 59 60 61 62 63 64 65 66 67 68 69 70
lista_expressoes (72)
    on left: 78 79, on right: 17


state 0

    0 $accept: . p $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 4 (s)

    p            go to state 6
    s            go to state 7
    decl_global  go to state 8
    decl_var     go to state 9
    decl_vetor   go to state 10
    tipo_var     go to state 11
    def_funcao   go to state 12
    cabecalho    go to state 13


state 1

   11 tipo_var: TK_PR_INT .

    $default  reduce using rule 11 (tipo_var)


state 2

   12 tipo_var: TK_PR_FLOAT .

    $default  reduce using rule 12 (tipo_var)


state 3

   13 tipo_var: TK_PR_BOOL .

    $default  reduce using rule 13 (tipo_var)


state 4

   14 tipo_var: TK_PR_CHAR .

    $default  reduce using rule 14 (tipo_var)


state 5

   15 tipo_var: TK_PR_STRING .

    $default  reduce using rule 15 (tipo_var)


state 6

    0 $accept: p . $end

    $end  shift, and go to state 14


state 7

    1 p: s .

    $default  reduce using rule 1 (p)


state 8

    2 s: decl_global . s

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 4 (s)

    s            go to state 15
    decl_global  go to state 8
    decl_var     go to state 9
    decl_vetor   go to state 10
    tipo_var     go to state 11
    def_funcao   go to state 12
    cabecalho    go to state 13


state 9

    5 decl_global: decl_var . ';'
   18 cabecalho: decl_var . '(' lista_parametros ')'

    ';'  shift, and go to state 16
    '('  shift, and go to state 17


state 10

    6 decl_global: decl_vetor . ';'

    ';'  shift, and go to state 18


state 11

    9 decl_var: tipo_var . ':' TK_IDENTIFICADOR
   10 decl_vetor: tipo_var . ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']'

    ':'  shift, and go to state 19


state 12

    3 s: def_funcao . s

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 4 (s)

    s            go to state 20
    decl_global  go to state 8
    decl_var     go to state 9
    decl_vetor   go to state 10
    tipo_var     go to state 11
    def_funcao   go to state 12
    cabecalho    go to state 13


state 13

   16 def_funcao: cabecalho . decl_local bloco_comando

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 8 (decl_local)

    decl_local  go to state 21
    decl_var    go to state 22
    tipo_var    go to state 23


state 14

    0 $accept: p $end .

    $default  accept


state 15

    2 s: decl_global s .

    $default  reduce using rule 2 (s)


state 16

    5 decl_global: decl_var ';' .

    $default  reduce using rule 5 (decl_global)


state 17

   18 cabecalho: decl_var '(' . lista_parametros ')'

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 20 (lista_parametros)

    decl_var                    go to state 24
    tipo_var                    go to state 23
    lista_parametros            go to state 25
    lista_parametros_nao_vazia  go to state 26
    parametro                   go to state 27


state 18

    6 decl_global: decl_vetor ';' .

    $default  reduce using rule 6 (decl_global)


state 19

    9 decl_var: tipo_var ':' . TK_IDENTIFICADOR
   10 decl_vetor: tipo_var ':' . TK_IDENTIFICADOR '[' TK_LIT_INT ']'

    TK_IDENTIFICADOR  shift, and go to state 28


state 20

    3 s: def_funcao s .

    $default  reduce using rule 3 (s)


state 21

   16 def_funcao: cabecalho decl_local . bloco_comando

    '{'  shift, and go to state 29

    bloco_comando  go to state 30


state 22

    7 decl_local: decl_var . ';' decl_local

    ';'  shift, and go to state 31


state 23

    9 decl_var: tipo_var . ':' TK_IDENTIFICADOR

    ':'  shift, and go to state 32


state 24

   23 parametro: decl_var .

    $default  reduce using rule 23 (parametro)


state 25

   18 cabecalho: decl_var '(' lista_parametros . ')'

    ')'  shift, and go to state 33


state 26

   19 lista_parametros: lista_parametros_nao_vazia .

    $default  reduce using rule 19 (lista_parametros)


state 27

   21 lista_parametros_nao_vazia: parametro . ',' lista_parametros_nao_vazia
   22                           | parametro .

    ','  shift, and go to state 34

    $default  reduce using rule 22 (lista_parametros_nao_vazia)


state 28

    9 decl_var: tipo_var ':' TK_IDENTIFICADOR .
   10 decl_vetor: tipo_var ':' TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    '['  shift, and go to state 35

    $default  reduce using rule 9 (decl_var)


state 29

   38 bloco_comando: '{' . seq_comando '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 36
    TK_PR_WHILE       shift, and go to state 37
    TK_PR_DO          shift, and go to state 38
    TK_PR_INPUT       shift, and go to state 39
    TK_PR_OUTPUT      shift, and go to state 40
    TK_PR_RETURN      shift, and go to state 41
    TK_IDENTIFICADOR  shift, and go to state 42
    ';'               shift, and go to state 43
    '{'               shift, and go to state 29

    $default  reduce using rule 41 (seq_comando)

    decl_var        go to state 44
    tipo_var        go to state 23
    chamada_funcao  go to state 45
    comando         go to state 46
    bloco_comando   go to state 47
    seq_comando     go to state 48
    atribuicao      go to state 49
    entrada         go to state 50
    saida           go to state 51
    retorna         go to state 52
    controle_fluxo  go to state 53


state 30

   16 def_funcao: cabecalho decl_local bloco_comando .

    $default  reduce using rule 16 (def_funcao)


state 31

    7 decl_local: decl_var ';' . decl_local

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 8 (decl_local)

    decl_local  go to state 54
    decl_var    go to state 22
    tipo_var    go to state 23


state 32

    9 decl_var: tipo_var ':' . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 55


state 33

   18 cabecalho: decl_var '(' lista_parametros ')' .

    $default  reduce using rule 18 (cabecalho)


state 34

   21 lista_parametros_nao_vazia: parametro ',' . lista_parametros_nao_vazia

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    decl_var                    go to state 24
    tipo_var                    go to state 23
    lista_parametros_nao_vazia  go to state 56
    parametro                   go to state 27


state 35

   10 decl_vetor: tipo_var ':' TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 57


state 36

   49 controle_fluxo: TK_PR_IF . '(' expressao ')' TK_PR_THEN comando
   50               | TK_PR_IF . '(' expressao ')' TK_PR_THEN comando TK_PR_ELSE comando
   51               | TK_PR_IF . '(' expressao ')' TK_PR_THEN comando_simples TK_PR_ELSE comando

    '('  shift, and go to state 58


state 37

   52 controle_fluxo: TK_PR_WHILE . '(' expressao ')' TK_PR_DO comando

    '('  shift, and go to state 59


state 38

   53 controle_fluxo: TK_PR_DO . comando TK_PR_WHILE '(' expressao ')'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 36
    TK_PR_WHILE       shift, and go to state 37
    TK_PR_DO          shift, and go to state 38
    TK_PR_INPUT       shift, and go to state 39
    TK_PR_OUTPUT      shift, and go to state 40
    TK_PR_RETURN      shift, and go to state 41
    TK_IDENTIFICADOR  shift, and go to state 42
    '{'               shift, and go to state 29

    decl_var        go to state 44
    tipo_var        go to state 23
    chamada_funcao  go to state 45
    comando         go to state 60
    bloco_comando   go to state 47
    atribuicao      go to state 49
    entrada         go to state 50
    saida           go to state 51
    retorna         go to state 52
    controle_fluxo  go to state 53


state 39

   44 entrada: TK_PR_INPUT . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 61


state 40

   45 saida: TK_PR_OUTPUT . lista_expressoes_nao_vazia

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_LIT_FALSE      shift, and go to state 64
    TK_LIT_TRUE       shift, and go to state 65
    TK_LIT_CHAR       shift, and go to state 66
    TK_LIT_STRING     shift, and go to state 67
    TK_IDENTIFICADOR  shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '('               shift, and go to state 71

    chamada_funcao              go to state 72
    lista_expressoes_nao_vazia  go to state 73
    expressao                   go to state 74


state 41

   48 retorna: TK_PR_RETURN . expressao
